test/libsolidity/syntaxTests/parsing/function_no_body.sol
contract test {
	function functionName(bytes32 input) public returns (bytes32 out);
}
// ----
// TypeError: (0-85): Contract "test" should be marked as abstract.
